[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross_entropy_method"
version = "0.1.0"
description = "Cross Entropy Method Implementation"
requires-python = ">=3.10"
dependencies = ["numpy==2.2.6"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
exclude = ["evaluation_tests_hidden*"]
